src/objects/sked_Accident_Incident_Report__c.object
<CustomObject>
    <fields>
        <fullName>sked_Additional_information__c</fullName>
        <inlineHelpText>Completed by Cosgrove Senior Management team.</inlineHelpText>
        <label>Additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Background_to_incident__c</fullName>
        <inlineHelpText>Record any support need changes or concerns leading up to incident if required and include any recent reviews with Cosgrove staff or statutory services.</inlineHelpText>
        <label>Background to incident:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Child_support_protection__c</fullName>
        <label>Child support protection (CSP1) concern</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Date_Time_of_Incident__c</fullName>
        <label>Date &amp; Time of Incident</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Debrief_Required__c</fullName>
        <label>Debrief Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Debrief_meeting_carried_out__c</fullName>
        <label>Debrief meeting carried out?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Debrief_meeting_details__c</fullName>
        <label>Debrief meeting details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Details_include_all_relevant__c</fullName>
        <label>Details (include all relevant details)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Exact_location_of_Incident__c</fullName>
        <label>Exact location of Incident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Follow_up_details__c</fullName>
        <label>Follow up details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Accident &amp; Incident Reports</relationshipLabel>
        <relationshipName>Accident_Incident_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_Contact_Method__c</fullName>
        <label>NOK/POA/ Guardian Contact Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_Details__c</fullName>
        <label>NOK/POA/Guardian Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_Treatment_Update_Detail__c</fullName>
        <label>NOK, POA, Guardian Treatment Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_NOK_POA_updated_regarding_treatment__c</fullName>
        <inlineHelpText>Has the family, NOK. POA been updated throughout incident regarding medical treatment?</inlineHelpText>
        <label>NOK, POA Guardian updated on treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Person_stayed_overnight_in_hospital__c</fullName>
        <label>Person stayed overnight in hospital</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Persons_support_plan_updated__c</fullName>
        <label>Persons support plan updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Reportable_under_Duty_of_Candour__c</fullName>
        <label>Reportable under Duty of Candour?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Require_Adult_support__c</fullName>
        <inlineHelpText>Does this incident require an Adult support protection concern raised?</inlineHelpText>
        <label>Adult support protection (ASP1) concern</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Treatment_Details__c</fullName>
        <inlineHelpText>include first aid provided/doctor called/ambulance called</inlineHelpText>
        <label>Treatment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Type_of_Incident_Other__c</fullName>
        <label>Type of Incident - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Type_of_Incident__c</fullName>
        <label>Type of Incident</label>
        <picklist>
            <picklistValues>
                <fullName>Burns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage to property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deterioration in mental health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deterioration in physical health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distress/behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall or trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire or Alarm activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed medication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Was_any_treatment_given__c</fullName>
        <label>Was any treatment given</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Was_the_NOK_POA_Contacted__c</fullName>
        <inlineHelpText>NOK = Next of Kin / POA = Power Of Attorney</inlineHelpText>
        <label>Was the NOK/POA/Guardian Contacted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Accident &amp; Incident Report</label>
    <listViews>
        <fullName>AI_Reports</fullName>
        <columns>NAME</columns>
        <columns>sked_Type_of_Incident__c</columns>
        <columns>sked_Date_Time_of_Incident__c</columns>
        <columns>sked_Details__c</columns>
        <columns>sked_Exact_location_of_Incident__c</columns>
        <columns>sked_Job__c</columns>
        <columns>sked_Was_any_treatment_given__c</columns>
        <columns>sked_Treatment_Details__c</columns>
        <columns>sked_NOK_POA_updated_regarding_treatment__c</columns>
        <columns>sked_NOK_POA_Treatment_Update_Detail__c</columns>
        <columns>sked_Was_the_NOK_POA_Contacted__c</columns>
        <columns>sked_NOK_POA_Details__c</columns>
        <columns>sked_NOK_POA_Contact_Method__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>A&amp;I Reports</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACI-{0000}</displayFormat>
        <label>Report Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accident &amp; Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_Record_when_Status_is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
     ISPICKVAL(sked_Status__c, &quot;Completed&quot;) , 
     ISPICKVAL(PRIORVALUE(sked_Status__c),&quot;Completed&quot;), 
     $Profile.Name &lt;&gt; &quot;System Administrator&quot;

)</errorConditionFormula>
        <errorMessage>This record can not be modified once the status has been set to &quot;Completed&quot; please contact your System Administrator to make further changes.</errorMessage>
    </validationRules>
</CustomObject>